--- a/css/index.css
+++ b/css/index.css
@@ -15,57 +15,33 @@
     box-sizing: border-box;
 }
 body{
-    background-image: url('fundo2.jpg');
-    position: relative;
+    background-color: var(--cor_primaria);
 }
-h1{
-    text-align: center;
-    padding: 10px;
-    margin: 100px;
-    background-color: #fad1d1;
-    border:2px solid #fed0fed0 ;
-    font-family: "Zen Kaku Gothic New", serif;
-    font-weight: 400;
-    font-style: normal;
-}
-button{
+header{
+    display: flex;
+    flex-direction: column ;
+    flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
-    padding: 40px;
-    font-family: "Zen Kaku Gothic New", serif;
-    font-weight: 400;
-    font-style: normal;
-    border-radius: 50px;
-    border: none;
-    font-size: 30px;
-    background-color: #fad1d1;
+    padding: 5%;
+}
+header h1{
+    font-family: var(--fonte_principal);
+    color: var(--cor_destaque);
+    font-size: 35px;
+}
+header nav{
     display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    text-align: center ;
+    gap: 20px;
 }
-div{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 30px;
+header nav a{
+    font-family:var(--fonte_secundaria);
+    color: var(--cor_secundaria);
+    margin-top:10px;
+    text-decoration: none;
 }
-button:hover{
-    background-color: #f5a9a9;
-}
-#gato{
-    background-image: url(gato.jpeg);
-    max-width: 1000px;
-    max-height: 1000px;
-    position: absolute;
-    left: 600px;
-    top: 200px;
-    display: none;
-}
-#Gato{
-    background-image: url(Gato.png);
-    max-width: 1000px;
-    max-height: 1000px;
-    position: absolute;
-    left: 600px;
-    top: 200px;
-    display: none;
-    transition:left 1.5s ease-in-out, top 1.5s ease-in-out;
+header nav span{
+    color: var(--cor_secundaria);
 }
