--- a/css/index.css
+++ b/css/index.css
@@ -149,3 +149,35 @@ header nav span{
 #about #lyup div:nth-child(1){
     text-align: justify;
 }
+/* agora vamos criar um carrossel horizontal */
+#projetos{
+    display: flex;
+    gap: 16px;
+    overflow-x:auto ;
+    scroll-snap-type: x mandatory;
+    padding: 20px;
+}
+
+#projetos::-webkit-scrollbar{
+    display: none;
+}
+#projetos a{
+    flex: 0 0 auto;
+    scroll-snap-align: start;
+    text-decoration: none;
+    color: inherit;
+}
+.card {
+    background: #f5f5f5;
+    border-radius: 12px;
+    padding: 16px;
+    width:250px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+    text-align: center;
+}
+.card img{
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 8px;
+}
